i2psnark: Fix comments wrapping (ticket #2284)

--- a/installer/resources/themes/snark/classic/snark.css
+++ b/installer/resources/themes/snark/classic/snark.css
@@ -2470,7 +2470,7 @@ td#bwHelp a {
 }
 
 .commentText {
-     white-space: normal;
+     white-space: normal !important;
      text-align: justify;
      width: 90%;
 }
